--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
                                 <p>Waarom zou je dat nu willen? Je inkomsten worden belast aan 25% tot 50%. Dat is heel wat. De overdracht van auteursrechten wordt echter maar aan 15% belast. Dat wil zeggen dat, als je je op deze manier laat betalen, je <b>netto heel wat meer overhoudt</b>. Aan dit gunstige belastingtarief zijn echter heel wat voorwaarden verbonden.</p>
                             </div>
                         </div>
+                        <h1>Infosessie</h1>
+                            
+                            <div class="item-content">
+                                <p>We organiseren regelmatig <b>infosessies</b>. De volgend vindt plaats op <b>donderdag 25 september 2014</b>.</p>
+                                
+                            </div>
                         <div class="fourcol last">
                             <blockquote>"Dankzij de samenwerking met Creative Shelter heb ik op 6 maanden tijd netto 1500 EUR meer verdiend." <footer><b>Tim, grafisch ontwerper - Gent</b></footer></blockquote>
                         </div>
