--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
                         </div>
                     </div><!--/.row--> 
                 </div><!--/.container--> 
-
+                <video src="/video/pass-countdown.ogg" width="150px" height="75px" controls>
+<p>If you are reading this, it is because your browser does not support the 'video' element. Try using the 'object' element listed further down the page.</p>
+</video>
+<p>If you can see the video controls but the video doesn't play when you click the "Play" button, your browser might not support this file type (i.e. <code>Ogg</code>). In this case, try the same code, but with a different file format.</p>
                 <!--
                 <div class="container container-black">
                     <div class="row">
