--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="row">
                     <div class="twelvecol last">
                         <a href="#" id="logo">
-                            <img src="img/logo.png" alt="Creative Shelter logo"/>            
+                            <img src="file:///Users/sdevocht/Google%20Drive/Creative%20Shelter/Communicatie:marketing/logo%20creative%20shelter.png" alt="Creative Shelter logo"/>            
                         </a>
                     </div><!--/.twelvecol--> 
                 </div><!--/.row--> 
